[tool.poetry]
name = "image-search"
version = "0.1.0"
description = ""
authors = ["Luis Miguel Serrano <luis.miguel.santos.serrano@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
seed = "image_search.main:seed"
search = "image_search.main:search"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
